# time-cabin

./: .gitignore  .pre-commit-config.yaml  Dockerfile  docker-compose.yml  pyproject.toml
app/: config.py  dependencies.py  exceptions.py  main.py
app/backgrounds/: email.py  videos.py
app/config/: __init__.py  base.py  dev.py  prod.py  staging.py
app/enums/: general.py  users.py  video.py
app/exceptions/: auth.py  base.py  general.py  search.py  users.py  videos.py
app/models/: video.py
app/repositories/: auth.py  database.py  search.py
app/routes/: auth.py  mainpage.py  search.py  users.py  video.py
app/services/: __init__.py  auth.py  database.py  search.py  videos.py
app/sql/crud/: auth.py  mainpage.py  users.py  video.py
app/sql/models/: general.py  users.py  video.py
app/sql/schemas/: auth.py  search.py  users.py  videos.py
app/utils/: cloud.py  email.py  general.py  pagination.py  redis.py  security.py  video.py
app/utils/auth/: authy_client.py  (+3 more)
docker/app/: Dockerfile  update.sh
migrations/: conf.py
migrations/models/: 0_20230416184628_init.py  0_20230820004221_init.py  1_20230719211523_user_model.py  1_20231010231855_videos table.py  2_20230726233808_video_user_relation.py  2_20231013223427_user model avatar field.py  3_20230803164358_video_url_field.py  3_20231015165502_user model email-vefified field.py  4_20230812194713_last_login_field.py  4_20231109181920_users table with password and avatar field.py  5_20231210205547_Videos model and Sheet model.py
nginx/: Dockerfile  nginx.conf
supervisor/: gunicorn.py  supervisord.conf
supervisord/: entrypoint.sh  supervisord.conf
(+4 files in other folders)
