[tool.poetry]
name = "m3u8"
version = "0.1.0"
description = ""
authors = ["neo <eyywqkgb@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.95.0"}
gunicorn = "^20.1.0"
tortoise-orm = {extras = ["asyncpg"], version = "^0.19.3"}
aerich = "^0.7.1"


[tool.poetry.group.dev.dependencies]
commitizen = "^2.42.1"
pre-commit = "^3.2.2"


[tool.aerich]
tortoise_orm = "migrations.conf.TORTOISE_ORM"
location = "./migrations"
src_folder = "./."


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
